crates/rome_js_formatter/tests/specs/prettier/js/sloppy-mode/function-declaration-in-while.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
while (false) function foo(){}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1 +1 @@
-while (false) function foo() {}
+while (false) function foo(){}
```

# Output

```js
while (false) function foo(){}
```


# Errors
```
error[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block
  ┌─ function-declaration-in-while.js:1:15
  │
1 │ while (false) function foo(){}
  │               ^^^^^^^^^^^^^^^^ wrap the function in a block statement


```


